minijinja/tests/snapshots/test_templates__template@macro_no_parameters.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/macro_no_parameters.txt
---


    hello world


