minijinja/tests/snapshots/test_templates__vm@debug.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% with f = range %}{% for x in f(upper) %}{{ debug() }}{% endfor %}{% endwith %}"
info:
  upper: 1
input_file: minijinja/tests/inputs/debug.txt
---
State {
    name: "debug.txt",
    current_block: None,
    auto_escape: None,
    ctx: {
        "x": 0,
        "loop": LoopState {
            index0: 0,
            index: 1,
            length: 1,
            revindex: 1,
            revindex0: 0,
            first: true,
            last: true,
            depth: 1,
            depth0: 0,
        },
        "f": minijinja::functions::builtins::range,
        "upper": 1,
    },
    env: Environment {
        globals: {
            "caller": minijinja::functions::builtins::caller,
            "debug": minijinja::functions::builtins::debug,
            "dict": minijinja::functions::builtins::dict,
            "range": minijinja::functions::builtins::range,
        },
        tests: [
            "defined",
            "endingwith",
            "even",
            "mapping",
            "number",
            "odd",
            "sequence",
            "startingwith",
            "string",
            "undefined",
        ],
        filters: [
            "abs",
            "batch",
            "bool",
            "count",
            "d",
            "default",
            "dictsort",
            "e",
            "escape",
            "first",
            "items",
            "join",
            "last",
            "length",
            "list",
            "lower",
            "replace",
            "reverse",
            "round",
            "safe",
            "slice",
            "title",
            "tojson",
            "trim",
            "upper",
            "urlencode",
        ],
        templates: [
            "debug.txt",
            "simple_include.txt",
            "simple_layout.txt",
            "super_with_html.html",
        ],
    },
}

