minijinja/tests/snapshots/test_templates__vm@do.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/do.txt
---






