minijinja/tests/snapshots/test_templates__vm@macro_basic.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/macro_basic.txt
---

---

    hello from macro


