minijinja/tests/snapshots/test_templates__vm@macro_line.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/macro_line.txt
---
 123 select 1

