minijinja/tests/snapshots/test_templates__vm@macro_parameters_call.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/macro_parameters_call.txt
---


    world is the word of the day


