minijinja/tests/snapshots/test_templates__vm@set.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/set.txt
---
Basic:
root value

new value

  
  new value 2

new value

Into Loop:

  1
  
  2

  2
  
  4

  3
  
  6


Conditional:

was true

Set Block:


foobar begins at 
i am first



little set is set inline


    inside with foobar is still set inline
  foobar nv is 
  new value

original foobar is set inline

